--- a/animals_update/localisation/rel_gov_and_titles.csv
+++ b/animals_update/localisation/rel_gov_and_titles.csv
@@ -72,6 +72,8 @@ title_panda_religious_official;Religious official;Bureaucrate religieux;;;;;;;;;
 title_panda_religious_official_desc;Religious official has a big impact on vassals joining  independence faction;Le bureaucrate religieux a de l'impact pour limiter l'adhésions à la faction d'indépendance;;;;;;;;;;;;x
 title_dog_war_councillor;War advisor;Conseiller de guerre;;;;;;;;;;;;x
 title_dog_war_councillor_desc;Advisor promoted to increase military power;Ce conseiller promeut le pouvoir militaire du royaume;;;;;;;;;;;;x
+title_dog_pol_councillor;Political advisor;Conseiller politique;;;;;;;;;;;;x
+title_dog_pol_councillor_desc;Advisor promoted to increase your reputation;Ce conseiller promeut la réputation de son seigneur auprès de ses vassaux;;;;;;;;;;;;x
 
 ###holy order titles
 d_polar_fighter;The polar warriors;Les chevaliers de la banquise;;;;;;;;;;;;x
