--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -211,6 +211,7 @@ dog_penalty_economic;unsatified council;Conseil insatisfait;;;;;;;;;;;;x
 dog_penalty_military;unsatified council;Conseil insatisfait;;;;;;;;;;;;x
 dog_military_council;military advisor;Conseiller militaire;;;;;;;;;;;;x
 dog_political_council;political advisor;Conseiller politique;;;;;;;;;;;;x
+dog_economic_council;economic advisor;Conseiller économique;;;;;;;;;;;;x
 
 #religion modifier
 dog_rel_unity_penality;Forced conversion;Conversion forcé;;;;;;;;;;;;x
