gov_4 - 4th advisor

--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -212,6 +212,7 @@ dog_penalty_military;unsatified council;Conseil insatisfait;;;;;;;;;;;;x
 dog_military_council;military advisor;Conseiller militaire;;;;;;;;;;;;x
 dog_political_council;political advisor;Conseiller politique;;;;;;;;;;;;x
 dog_economic_council;economic advisor;Conseiller économique;;;;;;;;;;;;x
+dog_intrigue_council;intrigue advisor;Conseiller d'intrigue;;;;;;;;;;;;x
 
 #religion modifier
 dog_rel_unity_penality;Forced conversion;Conversion forcé;;;;;;;;;;;;x
