--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -311,3 +311,7 @@ promote_character_unity_desc;Impose your unity on someone, transforming him into
 
 ### tooltip
 CREATED_HOLY_ORDER_DOG_TOOLTIP;[d_hunting_gards.GetName] created;[d_hunting_gards.GetName] sont créée;;;;;;;;;;;;x
+
+#### HORSES UPDATE
+start_horse_conv_quest;Do a horse ritual;Organiser un rituel des chevaux;;;;;;;;;;;;x
+start_horse_conv_quest_desc;As horse have their own lifestyle, trying to understand it in a ritual is a given;Comme les chevaux ont leur propre style de vie, organiser ce rituel est l'occasion de mieux le comprendre;;;;;;;;;;;;x
