--- a/animals_update/localisation/traits.csv
+++ b/animals_update/localisation/traits.csv
@@ -18,3 +18,6 @@ bear_religious_right;Religious right;Droits religieux;;;;;;;;;;;;x
 bear_religious_right_desc;The liege allow to practice his religion dispite his own;Le seigneur lige permet la pratique de la religion du vassal qui est différente de la sienne;;;;;;;;;;;;x
 sympathy_animals_religions;Animal sympathy;Sympathie animale;;;;;;;;;;;;x
 sympathy_animals_religions_desc;This character, throught not animal, has a spacial sympathy for animals religions;Ce personnage, bien que non animal, montre une certaine tolérance et une compréhension relative des animaux;;;;;;;;;;;;x
+
+trait_unconcious;unconcious;inconscient;;;;;;;;;;;;x
+trait_unconcious_desc; ;;;;;;;;;;;;;x
