--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -195,13 +195,13 @@ DESC_ani_175;Because of incompetent, the ritual should be cancelled.;à cause d'i
 OPT_ani_175;Why does I have to pay the price?;Pourquoi devrais-je avoir à en payer le prix?;;;;;;;;;;;;x
 DESC_ani_176;The ritual effect seems to have totally gone;Les effets du rituel semblent s'être totalement dissipé;;;;;;;;;;;;x
 OPT_ani_176;Or maby not;Ou peut-être pas;;;;;;;;;;;;x
-DESC_ani_177It seems that no one could do anything to heal;Il semblerai que personne ne soit en mesure de me soigner;;;;;;;;;;;;x
+DESC_ani_177;It seems that no one could do anything to heal;Il semblerai que personne ne soit en mesure de me soigner;;;;;;;;;;;;x
 OPT_ani_177;I hope to be well again soon enough;J'espère rapidement récupérer.;;;;;;;;;;;;x
 DESC_ani_178;I finnaly healed from my injuries!;J'ai enfin guérit de mes blessures;;;;;;;;;;;;x
 OPT_ani_178;What happened tp my body?;Qu'est-t-il arrivé à mon corps?;;;;;;;;;;;;x
 
 ## TOOLTIPS
-TT_ani_172_went_well;Everything goes well;Tout se passe comme prévu;;;;;;;;;;;;x
-TT_ani_172_went_wrong;An accident occur;Un accident se produit;;;;;;;;;;;;x
-TT_ani_177_healed;heal from injury;Est soigné de ses blessures;;;;;;;;;;;;x
-TT_ani_177_injury_is_worst,The injuries goes wrong;Les blessures s'empirent;;;;;;;;;;;;x
+TT_ani_172_went_well;everything goes well;tout se passe comme prévu;;;;;;;;;;;;x
+TT_ani_172_went_wrong;an accident occur;un accident se produit;;;;;;;;;;;;x
+TT_ani_177_healed;heal from injury;est soigné de ses blessures;;;;;;;;;;;;x
+TT_ani_177_injury_is_worst;the injuries goes wrong;les blessures s'empirent;;;;;;;;;;;;x
