--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -82,10 +82,10 @@ ca_ani_tech_1;Big library;Grande Bibliothèque;;;;;;;;;;;;x
 ca_ani_tech_2;Ducal library;Bibliothèque ducale;;;;;;;;;;;;x
 ca_ani_tech_3;Royal library;Bibliothèque royale;;;;;;;;;;;;x
 ca_ani_tech_4;Imperial library;Bibliothèque impériale;;;;;;;;;;;;x
-ca_bear_regiment_1;Training field;Salles d’entraînement;;;;;;;;;;;;x
-ca_bear_regiment_2;Training field;Salles d’entraînement;;;;;;;;;;;;x
-ca_bear_regiment_3;Training field;Salles d’entraînement;;;;;;;;;;;;x
-ca_bear_regiment_4;Training field;Salles d’entraînement;;;;;;;;;;;;x
+ca_bear_regiment_1;Training field;Salles d'entraînement;;;;;;;;;;;;x
+ca_bear_regiment_2;Training field;Salles d'entraînement;;;;;;;;;;;;x
+ca_bear_regiment_3;Training field;Salles d'entraînement;;;;;;;;;;;;x
+ca_bear_regiment_4;Training field;Salles d'entraînement;;;;;;;;;;;;x
 ca_bear_armor_1;Armory;Armurerie;;;;;;;;;;;;x
 ca_bear_armor_2;Armory;Armurerie;;;;;;;;;;;;x
 ca_bear_armor_3;Armory;Armurerie;;;;;;;;;;;;x
@@ -429,4 +429,23 @@ DOG_TT_HAS_MIL_IMPL;Has enough implication in military field;Est suffisament imp
 ## HORSE UODATE
 
 ca_default_horse_conv_quest;Horse festivities place;Place des fêtes à cheval;;;;;;;;;;;;x
+ca_horse_light_1;trainee field;Place d'entrainement;;;;;;;;;;;;x
+ca_horse_light_2;trainee field;Place d'entrainement;;;;;;;;;;;;x
+ca_horse_light_3;trainee field;Place d'entrainement;;;;;;;;;;;;x
+ca_horse_light_4;trainee field;Place d'entrainement;;;;;;;;;;;;x
+ca_horse_light_5;trainee field;Place d'entrainement;;;;;;;;;;;;x
+ca_horse_armor_1;Knight quarters;résidence des chevaliers;;;;;;;;;;;;x
+ca_horse_armor_2;Knight quarters;résidence des chevaliers;;;;;;;;;;;;x
+ca_horse_armor_3;Knight quarters;résidence des chevaliers;;;;;;;;;;;;x
+ca_horse_armor_4;Knight quarters;résidence des chevaliers;;;;;;;;;;;;x
+ca_horse_archer_1;Shooting range;Stand de tir;;;;;;;;;;;;x
+ca_horse_archer_2;Shooting range;Stand de tir;;;;;;;;;;;;x
+ca_horse_archer_3;Shooting range;Stand de tir;;;;;;;;;;;;x
+ca_horse_archer_4;Shooting range;Stand de tir;;;;;;;;;;;;x
+ca_horse_archer_5;Shooting range;Stand de tir;;;;;;;;;;;;x
+ca_horse_retinue_1;Horses' clan;Clan des chevaux;;;;;;;;;;;;x
+ca_horse_retinue_2;Horses' clan;Clan des chevaux;;;;;;;;;;;;x
+ca_horse_retinue_3;Horses' clan;Clan des chevaux;;;;;;;;;;;;x
+ca_horse_speciality_1;Race guild;Guilde de compétition;;;;;;;;;;;;x
+ca_horse_speciality_2;Race guild;Guilde de compétition;;;;;;;;;;;;x
 tb_default_horse_conv_quest;Horse festivities place;Place des fêtes à cheval;;;;;;;;;;;;x
