bat_3 - tribal localisation

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -449,3 +449,13 @@ ca_horse_retinue_3;Horses' clan;Clan des chevaux;;;;;;;;;;;;x
 ca_horse_speciality_1;Race guild;Guilde de compétition;;;;;;;;;;;;x
 ca_horse_speciality_2;Race guild;Guilde de compétition;;;;;;;;;;;;x
 tb_default_horse_conv_quest;Horse festivities place;Place des fêtes à cheval;;;;;;;;;;;;x
+tb_horse_light_1;trainee land;Terre d'entrainement;;;;;;;;;;;;x
+tb_horse_light_2;trainee land;Terre d'entrainement;;;;;;;;;;;;x
+tb_horse_light_3;trainee land;Terre d'entrainement;;;;;;;;;;;;x
+tb_horse_light_4;trainee land;Terre d'entrainement;;;;;;;;;;;;x
+tb_horse_archer_1;Bow deposit;stockage d'arc;;;;;;;;;;;;x
+tb_horse_archer_2;Bow deposit;stockage d'arc;;;;;;;;;;;;x
+tb_horse_archer_3;Bow deposit;stockage d'arc;;;;;;;;;;;;x
+tb_horse_archer_4;Bow deposit;stockage d'arc;;;;;;;;;;;;x
+tb_horse_retinue_1;Horses' clan;Clan des chevaux;;;;;;;;;;;;x
+tb_horse_retinue_2;Horses' clan;Clan des chevaux;;;;;;;;;;;;x
