--- a/animals_update/localisation/rel_gov_and_titles.csv
+++ b/animals_update/localisation/rel_gov_and_titles.csv
@@ -60,6 +60,10 @@ cat_feudal_gov;Cat's feodality;Féodalité des chats;;;;;;;;;;;;x
 cat_feudal_gov_desc;Government made by cats for cats;Gouvernement fait par les chats pour les chats;;;;;;;;;;;;x
 dog_feudal_gov;Dog's feodality;Féodalité des chiens;;;;;;;;;;;;x
 dog_feudal_gov_desc;Governement made by dogs for dogs;Gouvernement fait par les chiens pour les chiens;;;;;;;;;;;;x
+horse_feudal_gov;Horse feodality;Féodalité des chevaux;;;;;;;;;;;;x
+horse_feudal_gov_desc;Governement made by warrior horses;Gouvernement fait par chevaux guerrier;;;;;;;;;;;;x
+horse_merchant_gov;Horse republic;République des chevaux;;;;;;;;;;;;x
+horse_merchant_gov_desc;Governement made by merchant horses;Gouvernement fait par marchand chevaux;;;;;;;;;;;;x
 
 ###minor titles
 title_bear_children;Honor child;Enfant d'honneur;;;;;;;;;;;;x
