--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -200,7 +200,7 @@ OPT_ani_177;I hope to be well again soon enough;J'espère rapidement récupérer.;;
 DESC_ani_178;I finnaly healed from my injuries!;J'ai enfin guérit de mes blessures;;;;;;;;;;;;x
 OPT_ani_178;What happened tp my body?;Qu'est-t-il arrivé à mon corps?;;;;;;;;;;;;x
 DESC_ani_180;The preparation for the youth rite just ended. The rite shall start;Les préparations du rite de jeunesse sont terminés. Le grand rite va enfin pouvoir commencer;;;;;;;;;;;;x
-OPT_ani_180;It is a big success!;C'est un grand succés!;;;;;;;;;;;;x
+OPT_ani_180;The rite shall start!;Le rite va maintenant commencer!;;;;;;;;;;;;x
 DESC_ani_181;The rite has gone well. The childs acted as they were told.;Le rite s'est bien passé. Les enfants se sont comporté comme il est attendu de leur stature.;;;;;;;;;;;;x
 OPT_ani_181;They must have learned many things;Ils ont beaucoup appris!;;;;;;;;;;;;x
 DESC_ani_182;The preparation went well, the stage were beautiful. But when the children started the rite, something made them excited. Despite their comportment, adult hardly calmed them down. My prestige went a little down because of that;Les préparations du rite se sont bien passé. Malgré ça les enfants sont devenus insupportable. Avec les efforts mis en place pour les calmé, l'honneur est sauf.;;;;;;;;;;;;x
